Update Showcase Grid Web Part: - Changed TypeScript configuration to target ES2015. - Incremented package version to 1.0.0.4 and updated descriptions in package-solution.json. - Added support for customizable grid layout with columns and rows properties. - Enhanced ShowcaseGrid component to resample images for better performance. - Updated styles for grid layout to accommodate dynamic column settings. - Improved manifest to include new properties for grid configuration.

--- a/src/webparts/showcaseGrid/ShowcaseGridWebPart.manifest.json
+++ b/src/webparts/showcaseGrid/ShowcaseGridWebPart.manifest.json
@@ -8,6 +8,7 @@
   "requiresCustomScript": false,
   "supportedHosts": ["SharePointWebPart", "TeamsPersonalApp", "TeamsTab", "SharePointFullPage"],
   "supportsThemeVariants": true,
+  "supportsFullBleed": true,
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", 
     "group": { "default": "Advanced" },
@@ -15,7 +16,9 @@
     "description": { "default": "Showcase Grid description" },
     "officeFabricIconFontName": "GridViewMedium",
     "properties": {
-      "description": "Showcase Grid"
+      "description": "Showcase Grid",
+      "columns": 2,
+      "rows": 2
     }
   }]
 }
